fixed social list gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -757,7 +757,7 @@ body {
 }
 .social-list {
 	display: flex;
-	gap: 4rem;
+	gap: 3rem;
 }
 .social-list-item {
 	display: flex;
